fix(ProjectThumbnail): fix border radius flicker on Safari

--- a/src/Components/ProjectThumbnail/index.scss
+++ b/src/Components/ProjectThumbnail/index.scss
@@ -26,6 +26,7 @@
       position: relative;
       border-radius: 5px;
       transition: all 0.4s cubic-bezier(0.2, 0.9, 0.42, 1);
+      will-change: transform;
       > img,
       > video {
         position: absolute;
@@ -76,7 +77,7 @@
           transform: translate3d(0, -4px, 0);
           &.shadow {
             transform: scale(1.01) translate3d(0,px,0);
-            opacity: 0.4;
+            opacity: 0.5;
           }
         }
       }
